<resources>
    <string name="app_name">CurrencyExcercise</string>
    <string name="select_base_currency_label">Base Currency</string>
    <string name="currency_to_convert_label">Currency to convert</string>
    <string name="convert">Convert</string>
    <string name="details">Details</string>
    <string name="alert">Alert</string>
    <string name="no_Internet">Please check your internet connection</string>
    <string name="label_ok">Okay</string>
    <string name="xxxx">XXXX</string>
    <string name="base">Base</string>
    <string name="arrow_down">arrow_down</string>
    <string name="bottom">bottom</string>
    <string name="top">top</string>
    <string name="history_list">History List</string>
    <string name="popular_currencies_list">Popular Currencies List</string>
    <string name="currencyconverter">CurrencyConverter</string>
</resources>