<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/baseTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/arrowDownIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseTv"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/arrow_down" />

    <TextView
        android:id="@+id/convertTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/arrowDownIv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/convertTV"
        app:layout_constraintStart_toStartOf="parent"/>
    <View
        android:id="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/rateTv"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>